--- a/static/global.css
+++ b/static/global.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&display=swap");
-
 :root .dark-theme {
   --primary-bg: #0f364a;
   --primary-link: #57c3c6;
@@ -18,21 +16,8 @@
 
 * {
   box-sizing: border-box;
-}
-
-h1,
-h2,
-h3,
-p,
-span {
-  font-family: "Heebo";
-}
-
-html,
-body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 body {
@@ -40,3 +25,30 @@ body {
   height: 100vh;
   background: var(--primary-bg);
 }
+/* * {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+html {
+  block-size: 100%;
+  background-color: var(--surface1);
+  color: var(--text1);
+}
+
+body {
+  min-block-size: 100%;
+  font-family: system-ui, sans-serif;
+  padding: 5vmax;
+  display: grid;
+  place-content: center;
+  gap: 5vmax;
+} 
+
+p {
+  max-inline-size: 35ch;
+  font-size: 1.25rem;
+  line-height: 1.5;
+}
+
+*/
