--- a/static/reset.css
+++ b/static/reset.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 *,
@@ -18,10 +18,16 @@ h5,
 h6,
 p,
 ol,
-ul {
+ul,
+button {
   margin: 0;
   padding: 0;
+  border: 0;
   font-weight: normal;
+}
+
+button {
+  cursor: pointer;
 }
 
 ol,
