--- a/static/css/root.css
+++ b/static/css/root.css
@@ -15,8 +15,7 @@
     var(--brand-saturation)
   );
   --blue: hsl(200, 66%, 17%);
-  --gray: hsl(200, calc(66%/1.25), 14%);
-
+  --gray: hsl(200, calc(66% / 1.25), 14%);
 }
 
 a {
@@ -111,7 +110,6 @@ button.symbol {
   --error: red;
 }
 
-
 /** START ARTICLE **/
 
 .article {
@@ -119,6 +117,14 @@ button.symbol {
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
+}
+
+.article-title-mobile {
+  display: none;
+}
+.article-title-mobile h1 {
+  word-break: break-word;
+  padding: var(--size-fluid-1);
 }
 
 .article-header {
@@ -131,28 +137,36 @@ button.symbol {
   bottom: 2rem;
   left: 2rem;
   color: var(--text1);
-  font-size: var(--font-size-fluid-3);
-  
-}
-
-.article-header-backdrop {
+  font-size: var(--font-size-fluid-2);
   background-color: var(--surface1);
+  max-width: 80%;
+  padding: var(--size-2);
 }
 
 .article-header img {
   width: 100%;
 }
 
+.article-content,
+.article-contact,
+.article-title-mobile {
+  margin-top: 1rem;
+  border-radius: var(--radius-2);
+  background: var(--surface2);
+}
+
 .article-content {
   font-size: var(--font-size-1);
-  padding: var(--size-4);
-  background: var(--surface2);
-  border-radius: var(--radius-2);
-  margin-top: 1rem;
+  padding: var(--size-fluid-2);
 }
+
 
 .article-content p {
   margin: 1rem 0;
+}
+
+.article-content em {
+  overflow-wrap: break-word;
 }
 
 .article-content p:first-child {
@@ -162,5 +176,65 @@ button.symbol {
 .article-content p:last-child {
   margin-bottom: 0;
 }
+
+.article-content figure {
+  display: flex;
+  justify-content: center;
+}
+
+.article-contact {
+  display: flex;
+}
+
+.article-contact .left-section {
+  width: 40%;
+  padding-left: var(--size-4);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: var(--size-fluid-2);
+}
+
+.article-contact .right-section {
+  width: 60%;
+}
+
+.article-contact .name-and-title {
+  padding-bottom: var(--size-2);
+}
+
+.article-contact .contact-info {
+  padding-top: var(--size-2);
+}
+
+.article-contact .name-and-title,
+.article-contact .contact-info {
+  display: flex;
+  flex-direction: column;
+  gap: 0.1rem;
+}
+
+
+@media screen and (max-width: 480px) {
+  .article-contact {
+    flex-direction: column;
+  }
+
+  .article-contact .left-section,
+  .article-contact .right-section {
+    width: 100%;
+  }
+
+  .article-contact .left-section {
+    padding: var(--size-fluid-2);
+  }
+
+  .article-header h1 {
+    display: none;
+  }
+
+  .article-title-mobile {
+    display: block;
+  }
 
 /** END ARTICLE **/
