--- a/static/css/root.css
+++ b/static/css/root.css
@@ -16,6 +16,11 @@
   );
   --blue: hsl(200, 66%, 17%);
   --gray: hsl(200, calc(66%/1.25), 14%);
+  --dark: hsl(
+    var(--brand-hue)
+    calc(var(--brand-saturation) / 2)
+    calc(var(--brand-lightness) / 1.5)
+  );
 
 }
 
@@ -91,76 +96,3 @@ button.symbol {
   -webkit-tap-highlight-color: transparent;
   outline-offset: 5px;
 }
-
-:root:not([color-scheme]) {
-  /* Use blue theme-replica when theme is not set 
-    => makes site look nice without JavaScript :) */
-  --text1: hsl(var(--brand-hue) 15% 75%);
-  --text2: hsl(var(--brand-hue) 10% 61%);
-  --surface1: hsl(
-    var(--brand-hue) var(--brand-saturation) var(--brand-lightness)
-  );
-  --surface2: hsl(200, 40%, 26%);
-  --surface3: hsl(200, 40%, 33%);
-  --surface4: hsl(200, 40%, 40%);
-  --surface-shadow: var(--brand-hue) 30% 13%;
-  --shadow-strength: 0.2;
-  --link: hsl(182, 49%, 56%);
-  --logo-wave-1: #005392;
-  --logo-wave-0: #00a2b2;
-  --error: red;
-}
-
-
-/** START ARTICLE **/
-
-.article {
-  padding: var(--size-4);
-  width: 100%;
-  max-width: 1280px;
-  margin: 0 auto;
-}
-
-.article-header {
-  position: relative;
-  border-radius: var(--radius-2);
-}
-
-.article-header h1 {
-  position: absolute;
-  bottom: 2rem;
-  left: 2rem;
-  color: var(--text1);
-  font-size: var(--font-size-fluid-3);
-  
-}
-
-.article-header-backdrop {
-  background-color: var(--surface1);
-}
-
-.article-header img {
-  width: 100%;
-}
-
-.article-content {
-  font-size: var(--font-size-1);
-  padding: var(--size-4);
-  background: var(--surface2);
-  border-radius: var(--radius-2);
-  margin-top: 1rem;
-}
-
-.article-content p {
-  margin: 1rem 0;
-}
-
-.article-content p:first-child {
-  margin-top: 0;
-}
-
-.article-content p:last-child {
-  margin-bottom: 0;
-}
-
-/** END ARTICLE **/
