--- a/static/css/hscroll.css
+++ b/static/css/hscroll.css
@@ -8,18 +8,6 @@
   padding: var(--size-3) 0;
 }
 
-.hscroll div {
-  background: blue;
-  width: 177px;
-  flex-basis: 177px;
-  height: 177px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 1rem;
-  flex-shrink: 0;
-}
-
 :root .scroller-button {
   background: hsla(182, 49%, 56%, 1);
   position: absolute;
@@ -31,6 +19,10 @@
   height: 2rem;
   font-size: 1rem;
   min-width: 2rem;
+}
+
+:root .scroller-button:disabled {
+  opacity: 0.5;
 }
 
 .scroller-button--left {
