--- a/components/button/button.css
+++ b/components/button/button.css
@@ -6,7 +6,7 @@ button[color-scheme] {
   background-color: var(--surface1);
 }
 
-button {
+.button, button {
   color: var(--text1);
   min-height: 1rem;
   min-width: 3rem;
@@ -29,8 +29,9 @@ button {
   /* transition: border-color .5s var(--ease-2) 1s; */
 }
 
-button:hover,button:focus {
+.button:hover,button:hover,button:focus {
   border: var(--border-size-2) solid var(--surface4);
+  text-decoration: none;
 }
 
 button[aria-pressed="true"],button:focus {
