--- a/static/css/root.css
+++ b/static/css/root.css
@@ -95,3 +95,22 @@ button.symbol {
   -webkit-tap-highlight-color: transparent;
   outline-offset: 5px;
 }
+
+.target {
+  min-height: 1rem;
+  min-width: 3rem;
+  margin: var(--size-1);
+  display: inline-flex;
+  white-space: nowrap;
+  font-size: var(--font-size-fluid-1);
+  
+  /* padding-left: var(--size-6);
+  padding-right: var(--size-6);
+  padding-top: var(--size-2);
+  padding-bottom: var(--size-2); */
+
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  /* transition: border-color .5s var(--ease-2) 1s; */
+}
