--- a/static/css/hscroll.css
+++ b/static/css/hscroll.css
@@ -17,7 +17,7 @@
 }
 
 :root .scroller-button {
-  background: hsla(182, 49%, 56%, 1);
+  /*background: hsla(182, 49%, 56%, 1);*/
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -27,10 +27,11 @@
   height: 2rem;
   font-size: 1rem;
   min-width: 2rem;
+  opacity: 0.1;
 }
 
 :root .scroller-button:disabled {
-  opacity: 0.5;
+  opacity: 0;
 }
 
 .scroller-button--left {
