--- a/static/css/people-card.css
+++ b/static/css/people-card.css
@@ -5,7 +5,7 @@
   white-space: nowrap;
 
   /** Ensures that all the names fit and it looks okay **/
-  min-width: 20rem;
+  /* min-width: 20rem; */
 }
 
 .people-position {
