--- a/static/css/hscroll.css
+++ b/static/css/hscroll.css
@@ -17,7 +17,7 @@
 }
 
 :root .scroller-button {
-  /*background: hsla(182, 49%, 56%, 1);*/
+  background: hsla(182, 49%, 56%, 1);
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
