--- a/static/css/light.css
+++ b/static/css/light.css
@@ -4,7 +4,7 @@
   --text2: hsl(var(--brand-hue) var(--brand-saturation) 30%);
   --surface0: hsl(var(--brand-hue) 20% 99%);
   --surface1: hsl(var(--brand-hue) 20% 99%);
-  --surface2: hsl(var(--brand-hue) 25% 94%);
+  --surface2: hsl(var(--brand-hue) calc(var(--brand-saturation)*1) calc(var(--brand-lightness)*5.7));
   --surface3: hsl(var(--brand-hue) 20% 92%);
   --surface4: hsl(var(--brand-hue) 20% 90%);
   --surface-shadow: var(--brand-hue) 10% 20%;
