--- a/static/css/root.css
+++ b/static/css/root.css
@@ -77,7 +77,7 @@ option {
   font-variation-settings: "FILL" 0, "wght" 200, "GRAD" 0, "opsz" 40;
 }
 
-button.symbol {
+.icon {
   --size: 2rem;
 
   background: none;
@@ -120,6 +120,14 @@ button.symbol {
   text-overflow: ellipsis;
   word-wrap: break-word;
   overflow: hidden;
-  max-height: 3.5rem;
+  max-height: 4.5rem;
   line-height: 1rem;
 }
+
+.line-clamp3 {
+  display: -webkit-box;
+   -webkit-line-clamp: 3;
+   -webkit-box-orient: vertical; 
+  
+   overflow: hidden;
+ }
