--- a/static/css/root.css
+++ b/static/css/root.css
@@ -21,6 +21,8 @@
     calc(var(--brand-saturation) / 2)
     calc(var(--brand-lightness) / 1.5)
   );
+
+  --size: 48px;
 }
 
 a {
@@ -45,6 +47,19 @@ body {
   padding: 0;
 }
 
+menu {
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0px;
+}
+dialog:not([open]) {
+  pointer-events: none;
+  opacity: 0;
+}
 header,
 footer {
   color: var(--text1);
@@ -73,18 +88,12 @@ option {
   font-size: var(--font-size-fluid-1);
 }
 
-.symbol {
-  font-variation-settings: "FILL" 0, "wght" 200, "GRAD" 0, "opsz" 40;
-}
 
 .icon {
-  --size: 2rem;
-
   background: none;
   border: none;
   padding: 0;
-  color: var(--accent);
-
+  
   inline-size: var(--size);
   block-size: var(--size);
   aspect-ratio: 1;
@@ -92,17 +101,23 @@ option {
 
   cursor: pointer;
   touch-action: manipulation;
-  -webkit-tap-highlight-color: transparent;
   outline-offset: 5px;
+
+  color: var(--text2);
+  fill: var(--text2); 
+}
+
+.icon:hover {
+  fill:var(--accent);
 }
 
 .target {
-  min-height: 1rem;
-  min-width: 3rem;
+  min-height: 2rem;
+  min-width: 2rem;
   margin: var(--size-1);
   display: inline-flex;
   white-space: nowrap;
-  font-size: var(--font-size-fluid-1);
+  font-size: var(--font-size-fluid-2);
   
   /* padding-left: var(--size-6);
   padding-right: var(--size-6);
@@ -115,7 +130,7 @@ option {
   /* transition: border-color .5s var(--ease-2) 1s; */
 }
 
-.limit-lines {
+ .limit-lines {
   display: block;
   text-overflow: ellipsis;
   word-wrap: break-word;
@@ -128,6 +143,22 @@ option {
   display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical; 
-  
    overflow: hidden;
- }
+}
+
+dialog {
+  border-radius: var(--radius-2);
+  box-shadow: var(--shadow-6); 
+}
+
+dialog[color-scheme] {
+  background: var(--surface0);
+}
+
+dialog::backdrop {
+  backdrop-filter: blur(30px);
+  -webkit-backdrop-filter: blur(30px);
+}
+html:has(dialog[open]) {
+  overflow: hidden;
+}
