--- a/static/css/hscroll-dynamic.css
+++ b/static/css/hscroll-dynamic.css
@@ -1,14 +1,51 @@
 .dynamic-image-hscroll {
   position: relative;
+  height: 800px;
+}
+
+.dynamic-image-hscroll::after {
+  position: absolute;
+  content: "";
+  inset: 0px;
+  background: linear-gradient(
+    90deg,
+    rgb(10, 35, 67) 0%,
+    rgba(10, 35, 67, 0) 100%
+  );
+}
+
+.dynamic-image-big {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .dynamic-scroll-details {
   position: absolute;
-  top: 40%;
+  top: 20%;
+  left: 5%;
+  right: 5%;
+  z-index: 1;
+}
+
+.dynamic-scroll-details h2 {
+  font-size: var(--font-size-fluid-1);
 }
 
 .dynamic-scroll-container {
   position: absolute;
-  bottom: 20px;
+  bottom: 0;
   padding: 0 2rem;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  z-index: 1;
+}
+
+.scroll-image img {
+  aspect-ratio: 1;
+  object-fit: cover;
+  border-radius: var(--radius-2);
+  border-radius: 5px;
+  width: 200px;
 }
