Intelligent max size if album image

--- a/components/album/halbum.css
+++ b/components/album/halbum.css
@@ -2,12 +2,13 @@
   --sm-space: 1rem;
   --md-space: 2rem;
   --min-halbum-size: 145px;
-  --max-halbum-size: 580px;
+  --max-halbum-size: 40vw;
 }
 
 .halbum-image {
   width: clamp(var(--min-halbum-size), 20vw, var(--max-halbum-size));
   min-width: var(--min-halbum-size);
+  font-size: var(--font-size-fluid-1,1rem);
 }
 
 .halbum-image img {
