--- a/static/css/root.css
+++ b/static/css/root.css
@@ -117,7 +117,7 @@ option {
   margin: var(--size-1);
   display: inline-flex;
   white-space: nowrap;
-  font-size: var(--font-size-fluid-1);
+  font-size: var(--font-size-fluid-2);
   
   /* padding-left: var(--size-6);
   padding-right: var(--size-6);
@@ -131,10 +131,10 @@ option {
 }
 
 .ellipsis {
-  maxLines: "1";
-  overflow: "hidden";
-  whiteSpace: "nowrap";
-  textOverflow: "ellipsis";
+  maxLines: 1;
+  overflow: hidden;
+  whiteSpace: nowrap;
+  textOverflow: ellipsis;
 }
 
 .limit-lines {
