--- a/static/css/hscroll.css
+++ b/static/css/hscroll.css
@@ -7,6 +7,17 @@
 .hscroll {
   display: flex;
   padding: var(--size-1) 0 var(--size-3) 0;
+  background: var(--max-visible-children);
+}
+
+.max-visible-children > * {
+  width: auto;
+  min-width: auto;
+}
+
+.max-visible-children > * img {
+  width: calc(100vw / var(--max-visible-children));
+  max-width: calc(100vw / var(--max-visible-children));
 }
 
 .hscroll > *:not(:last-child) {
