--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -1,6 +1,7 @@
 html {
   box-sizing: border-box;
   font-size: 1rem;
+  scroll-behavior: smooth;
 }
 
 *,
@@ -31,6 +32,7 @@ button {
   cursor: pointer;
 }
 
+menu,
 ol,
 ul {
   list-style: none;
