--- a/static/css/article.css
+++ b/static/css/article.css
@@ -30,6 +30,7 @@
   color: var(--text1);
   font-size: var(--font-size-fluid-2);
   background-color: var(--surface0);
+  backdrop-filter: blur(25px);
   max-width: 80%;
   padding: var(--size-2);
   color: var(--text2);
