--- a/static/css/root.css
+++ b/static/css/root.css
@@ -92,9 +92,9 @@ option {
   background: none;
   border: none;
   padding: 0;
-  
+/*   
   inline-size: var(--size);
-  block-size: var(--size);
+  block-size: var(--size); */
   aspect-ratio: 1;
   border-radius: 50%;
 
@@ -158,7 +158,8 @@ dialog {
 }
 
 dialog[color-scheme] {
-  background: var(--surface0);
+  backdrop-filter: blur(30px);
+  /* background: var(--surface0); */
 }
 
 dialog::backdrop {
@@ -167,4 +168,9 @@ dialog::backdrop {
 }
 html:has(dialog[open]) {
   overflow: hidden;
+}
+
+*::backdrop {
+  backdrop-filter: blur(30px);
+  /* background: var(--surface0); */
 }
