--- a/static/css/dark.css
+++ b/static/css/dark.css
@@ -17,4 +17,6 @@
   --logo-wave-1: hsl(206, 100%, 29%);
   --logo-wave-0: hsl(185, 100%, 35%);
   --error: red;
+  --accent: hsl(200deg 55.64% 46.04%); /* based on light's blue text2, but lighter*/
+  --accent2: hsl(197deg 100% 51%);
 }
