--- a/static/css/light.css
+++ b/static/css/light.css
@@ -14,8 +14,8 @@
   --logo-blue: hsl(206, 100%, 29%);
   --logo-green: hsl(185, 100%, 35%);
   --logo-wave-1: hsl(206, 100%, 29%);
-  --logo-wave-0: #00A2B2;
-  --accent: #3a9c9e;
+  --logo-wave-0: hsl(185, 100%, 35%);
+  --accent: hsl(181, 46%, 42%);
   --error: red;
 }
 
@@ -32,7 +32,9 @@
   --surface-shadow: var(--brand-hue) 30% 13%;
   --shadow-strength: .2;
   --link: hsl(182, 49%, 56%);
-  --logo-wave-1: #005392;
-  --logo-wave-0: #00A2B2;
+  --accent: hsl(200deg 55.64% 46.04%);
+  --accent2: hsl(197deg 100% 51%);
+  --logo-wave-1: hsl(206, 100%, 29%);
+  --logo-wave-0: hsl(185, 100%, 35%);
   --error: red;
 }
